--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "alfares_medical"
+        applicationId "com.alfaresmedical"
         minSdkVersion 17
         targetSdkVersion 29
         multiDexEnabled true
